[workspace]
resolver = "2"
members = [ "roslibrust_util", "tf_mcap",
    "tf_roslibrust",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lucasw/tf_roslibrust"
authors = [
    "Arjo Chakravarty <arjo129@gmail.com>",
    "Lucas Walter <wsacul@gmail.com",
    "Michael Maerz <maerz@magazino.eu>",
    "Mitsuharu Kojima <kojima@smilerobotics.com>",
]
keywords = ["transforms", "robotics", "ROS", "tf"]
categories = ["science::robotics"]

[workspace.dependencies]
nalgebra = "0.30"
thiserror = "1.0.65"
