[workspace]
resolver = "2"
members = [ "launcher", "roslibrust_util", "tf_mcap",
    "tf_roslibrust",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lucasw/tf_roslibrust"
authors = [
    "Arjo Chakravarty <arjo129@gmail.com>",
    "Lucas Walter <wsacul@gmail.com",
    "Michael Maerz <maerz@magazino.eu>",
    "Mitsuharu Kojima <kojima@smilerobotics.com>",
]
keywords = ["transforms", "robotics", "ROS", "tf"]
categories = ["science::robotics"]

[workspace.dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.16", features = ["cargo"] }
log = "0.4.22"
nalgebra = "0.30"
thiserror = "1.0.65"
tokio = { version = "1.40.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread"] }
toml = "0.8.19"

[workspace.dependencies.roslibrust]
git = "https://github.com/lucasw/roslibrust"
branch = "get_rx_msg_def"
# path = "../../roslibrust/roslibrust"
# version="0.10.2"
features = ["ros1"]

[workspace.dependencies.roslibrust_codegen]
git = "https://github.com/lucasw/roslibrust"
branch = "get_rx_msg_def"
