[workspace]
resolver = "2"
members = ["tf_rosrust", "tf_r2r"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smilerobotics/tf_rosrust"
authors = [
    "Arjo Chakravarty <arjo129@gmail.com>",
    "Michael Maerz <maerz@magazino.eu>",
    "Mitsuharu Kojima <kojima@smilerobotics.com>",
]
keywords = ["transforms", "robotics", "ROS", "tf"]
categories = ["science::robotics"]

[workspace.dependencies]
futures = "0.3"
nalgebra = "0.30"
r2r = "0.9"
rosrust = "0.9"
thiserror = "1.0"
tokio = "1"

[workspace.lints.rust]
# missing_debug_implementations = "warn" # TODO: Most rosrust types don't implement Debug
# missing_docs = "warn" # TODO
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
[workspace.lints.clippy]
lint_groups_priority = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/12920

[patch.crates-io]
xml-rs = { version = "0.3", git = "https://github.com/kornelski/xml-rs.git", tag = "0.3.6" } # https://github.com/adnanademovic/rosrust/issues/210
