[package]
name = "launcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
futures = "0.3.31"
serde.workspace = true
serde-big-array.workspace = true
serde_derive.workspace = true
tokio.workspace = true
toml.workspace = true

[dependencies.roslibrust_util]
path = "../roslibrust_util"
