[package]
name = "roslibrust_util"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
camino = "1.1.9"
log.workspace = true
memmap = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
serde_derive = "1.0.210"
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing = "0.1.40"

roslibrust.workspace = true
roslibrust_codegen.workspace = true

[dependencies.roslibrust_codegen_macro]
git = "https://github.com/lucasw/roslibrust"
branch = "get_rx_msg_def"
