[package]
name = "tf_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ros = ["rosrust", "ros-nalgebra"]
ros2 = ["r2r"]

[dependencies]
nalgebra = "0.29"
thiserror = "1.0"
rosrust = { version = "0.9", optional = true }
ros-nalgebra = { version = "0.1.0", optional = true }
r2r = { version = "0.7", optional = true }
