[package]
name = "tf_mcap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
chrono = "0.4.38"
clap.workspace = true
log.workspace = true
mcap = "0.11.0"
serde_rosmsg = "0.2.0"
simple-log = "2.1.1"
simple_logger = "5.0.0"

# TODO(lucasw) every package here depends on roslibrust_util and roslibrust,
# put these in the parent Cargo.toml
[dependencies.roslibrust_util]
path = "../roslibrust_util"

[dependencies.mcap_tools]
git = "https://github.com/lucasw/mcap_tools"
branch = "main"

[dependencies.tf_roslibrust]
path = "../tf_roslibrust"

[[bin]]
name = "tf_mcap_tree"
path = "src/bin/mcap_tree.rs"
