[package]
name = "tf_roslibrust"
version = "0.2.4"
edition = "2021"
rust-version = "1.75"
license = "BSD 3-Clause"
publish = false
description = """
This is a rust port of the [ROS tf library](http://wiki.ros.org/tf).
It is intended for being used in robots to help keep track of multiple coordinate
frames and is part of a larger suite of rust libraries that provide support for
various robotics related functionality.
This supports ROS1 using the roslibrust crate.
"""

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["cargo"] }
log = "0.4.22"
nalgebra.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
serde_derive = "1.0.210"
simple_logger = "5.0.0"
smart-default = "0.7.1"
thiserror.workspace = true
tokio = "1.38.0"
toml = "0.8.19"

[dependencies.roslibrust_util]
path = "../roslibrust_util"

[dependencies.roslibrust]
git = "https://github.com/lucasw/roslibrust"
branch = "get_rx_msg_def"
# path = "../../roslibrust/roslibrust"
# version="0.10.2"
features = ["ros1"]

[dependencies.roslibrust_codegen]
git = "https://github.com/lucasw/roslibrust"
branch = "get_rx_msg_def"
# path = "../../roslibrust/roslibrust_codegen"
# version="0.10"

[[bin]]
name = "tf_capture"
path = "src/bin/capture.rs"

[[bin]]
name = "tf_tree"
path = "src/bin/tree.rs"

[[bin]]
name = "tf_echo"
path = "src/bin/echo.rs"

[[bin]]
name = "tf_from_joints"
path = "src/bin/tf_from_joints.rs"

[[bin]]
name = "tf_publisher"
path = "src/bin/publisher.rs"

[[bin]]
name = "tf2tfs"
path = "src/bin/tf2tfs.rs"
